eyes bug on mobile fixed

--- a/src/pages/Register/style.sass
+++ b/src/pages/Register/style.sass
@@ -129,7 +129,11 @@
         background-position: center
         cursor: pointer
         transition: .3s ease
-    button.unshowed
-        background-image: url('https://static.xx.fbcdn.net/rsrc.php/v3/yZ/r/je5FEJkU1_K.png')
-    button.showed
-        background-image: url('https://static.xx.fbcdn.net/rsrc.php/v3/yk/r/swFqSxKYa5M.png')
+        svg
+            box-sizing: border-box
+            width: 100%
+            height: 100%
+            padding: .1rem
+            path
+                width: 100%
+
